SigmaCodebackup3rdSep/objects/Lot__c.object
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Inventory_Location__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Name__c</fullName>
        <label>Lot Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>startsWith</operation>
            <value>z</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LT-{0000}</displayFormat>
        <label>Lot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Expiry_Date_Validation</fullName>
        <active>true</active>
        <description>&apos;Expiry Date&apos; should not be less than the Created Date</description>
        <errorConditionFormula>Expiry_Date__c &lt; Created_Date__c</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date should not be less than the Created Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Blank_Lot_Name</fullName>
        <active>true</active>
        <description>Lot Name should not be empty</description>
        <errorConditionFormula>ISBLANK( Lot_Name__c)</errorConditionFormula>
        <errorDisplayField>Lot_Name__c</errorDisplayField>
        <errorMessage>Please enter the Lot Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Blank_Product_field</fullName>
        <active>false</active>
        <description>Validation_for_Blank_Product_field</description>
        <errorConditionFormula>ISBLANK(   Product__r.Name )</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Please select any product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_Expiry_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Expiry_Date__c )</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Enter Expiry Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_created_date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Created_Date__c )</errorConditionFormula>
        <errorDisplayField>Created_Date__c</errorDisplayField>
        <errorMessage>Enter Created Date.</errorMessage>
    </validationRules>
</CustomObject>